--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<div class="col-9">
 								<div class="more_desc" >
 									<p class='about-body' id="more-main">
-										<!-- deliver dynamic content -->
+										As temperatures rise due to climate change, we expect to see increasing numbers of wildlife species that are typically located in more southern regions. Sightings of rare birds, which include the sandhill crane and wood stork, have become more and more common. We are also seeing dwindling numbers of some of our historically common native birds, as well as changes in the timing of migration and breeding patterns in some species. The Mississippi kite, a relative newcomer, was first observed nesting in Durham
 									</p>
 								</div>
 								<br>
