--- a/index.html
+++ b/index.html
@@ -28,19 +28,15 @@
 	<div class='container' style="overflow: auto;">
 		<div class='canvas' id='scroll' onchange=""></div>
 		<div>
-			<img src="./img/alluminium_bg.png" alt="" id="backgear" class="backgear-img"
-				style="height: 3318.18px; width: 3318.18px; left: -1659.0px; top: -1247.09px;">
+			<img src="./img/alluminium_bg.png" alt="" id="backgear" class="backgear-img" style="height: 3318.18px; width: 3318.18px; left: -1659.0px; top: -1247.09px;">
 		</div>
 		<div id='icon-div'>
-			<button type="button" class="btn" id="btn_more" data-toggle="modal"
-				data-target="#exampleModal1">MORE</button>
-			<button type="button" class="btn" id="btn_about" data-toggle="modal"
-				data-target="#exampleModal2">ABOUT</button>
+			<button type="button" class="btn" id="btn_more" data-toggle="modal" data-target="#exampleModal1">MORE</button>
+			<button type="button" class="btn" id="btn_about" data-toggle="modal" data-target="#exampleModal2">ABOUT</button>
 		</div>
 	</div>
 	<!-- Modal1 -->
-	<div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-		aria-hidden="true">
+	<div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-scrollable" id="dialog1">
 			<div class="modal-content" id="content1">
 				<div class="modal-header">
@@ -54,19 +50,18 @@
 						<div class="col-9">
 							<div class="more_desc">
 								<p class='about-body' id="more-main">
-									As temperatures rise due to climate change, we expect to see 
-									increasing numbers of wildlife species that are typically located 
-									in more southern regions. Sightings of rare birds, which include 
-									the sandhill crane and wood stork, have become more and more common. 
-									We are also seeing dwindling numbers of some of our historically 
-									common native birds, as well as changes in the timing of migration 
-									and breeding patterns in some species. The Mississippi kite, 
+									As temperatures rise due to climate change, we expect to see
+									increasing numbers of wildlife species that are typically located
+									in more southern regions. Sightings of rare birds, which include
+									the sandhill crane and wood stork, have become more and more common.
+									We are also seeing dwindling numbers of some of our historically
+									common native birds, as well as changes in the timing of migration
+									and breeding patterns in some species. The Mississippi kite,
 									a relative newcomer, was first observed nesting in Durham in 2018.
 								</p>
 							</div>
 							<br>
-							<a class='about-body'
-								href="www.ci.durham.nh.us/administration/responding-climate-change">Learn more about how
+							<a class='about-body' href="www.ci.durham.nh.us/administration/responding-climate-change">Learn more about how
 								Durham is addressing climate change here.</a>
 							<br><br>
 							<p class='about-body'>#seacoastremembranceproject</p>
@@ -83,8 +78,7 @@
 		</div>
 	</div>
 	<!-- Modal2 -->
-	<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-		aria-hidden="true">
+	<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-scrollable" id="dialog2">
 			<div class="modal-content" id="content2">
 				<div class="modal-header">
